--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.3-Beta1 
	- Fixed a problem with Localplay Skip to song and added 
		highlighting of currently playing song
	- Added new Flash Player with full support for Non-US Char and 
		colors. (Thx PB1DFT/Enrico Lai http://www.enricolai.com)
	- Tweaked how MPD is handled, if MPD is stopped a new play action
		will clear old playlist, otherwise Play appends. 
		(Thx henrik)

--------------------------------------------------------------------------
  v.3.3.3-Alpha2 11/12/2006
        - Added Export to Itunes DB function (Thx PB1DFT)
        - Added New XSPF Player that's solves all the UTF8 encoding problems (Thx Enrico Lai)
	- Fixed some Ajax Issues, added Now Playing to TV page
	- Fixed album art search on every Catalog Add
	- Added exception to MPD controller, forces HTTP play regardless
	- Added From File: option to album art (Thx pb1dft)
	- Updated French Translation (Thx charrea)
	- Tweaked default config, Ratings are enabled by default
	- Added Genre link on show_songs along with some other minor UI
		improvements
	- Added Export to Itunes DB function (Thx PB1DFT) 	
	- Added New XSPF Player that's solves all the UTF8 encoding problems (Thx Enrico Lai)
	- Fixed Show All of Song Titles not having any data
	- Fixed override of local_length to 9000 regardless of config file
	- Tweaked Remeber Me Checkbox to be disabled if remember_length
		is <= local_length
	- Fixed issues with date not being set on insert of stats
	- Fixed style issue on Single Album view when ratings are off
	- Added Democratic Play ability, UI incomplete and 'clunky'
	- Added some extra error checking to the install process
	- Fixed issue with delete confirmation on playlist always being 