@@ -44,6 +44,7 @@ Contents:
 	- RM
 	- AAC/M4A
 	- MPC
+	- WV
 
   B) Supported Stream Methods
 
