@@ -79,15 +79,15 @@ $default_sort = "%a/%A";
 	<td><input type="checkbox" onclick="flipField('artextra1');flipField('artextra2');flipField('artextra3');" name="gather_art" value="1" /><br />
 		<table border="0" width="100%" cellpadding="0" cellspacing="0">
 		<tr class="even">
-			<td><?php echo _("ID3V2 Tags"); ?>:</td>
+			<td><?php echo _('ID3V2 Tags'); ?>:</td>
 			<td><input id="artextra1" disabled="disabled" type="checkbox" name="art_id3v2" value="1" /></td>
 		</tr>
 		<tr class="even">
-			<td><?php echo _("Amazon"); ?>:</td>
+			<td><?php echo _('Amazon'); ?>:</td>
 			<td><input id="artextra2" disabled="disabled" type="checkbox" name="art_amazon" value="1" /></td>
 		</tr>
 		<tr class="even">
-			<td><?php echo _("File Folder"); ?>:</td>
+			<td><?php echo _('File Folder'); ?>:</td>
 			<td><input id="artextra3" disabled="disabled" type="checkbox" name="art_folder" value="1" /></td>
 		</tr>
 		</table>
@@ -95,7 +95,7 @@ $default_sort = "%a/%A";
 	</td>
 </tr>
 <tr>
-	<td valign="top"><?php echo _("Build Playlists from m3u Files"); ?>:</td>
+	<td valign="top"><?php echo _('Build Playlists from m3u Files'); ?>:</td>
 	<td><input type="checkbox" name="parse_m3u" value="1" /></td>
 </tr>
 
